Initial RESTful api.

--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -10,7 +10,7 @@
             <tr>
                 <th>Lähettäjä</th>
                 <th>Päiväys</th>
-                <th>Maksettu</th>
+                <th>Hyväksytty</th>
                 <th></th>
             </tr>
         </thead>
