--- a/src/App/templates/form.html
+++ b/src/App/templates/form.html
@@ -40,5 +40,6 @@
 </div>
 
 <script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="{{ url_for('static', filename='filereader.js') }}"></script>
 <script src="{{ url_for('static', filename='iban.js/iban.js') }}"></script>
 {% endblock %}
