Server side-validations and uploading bills now works.

--- a/src/App/templates/form.html
+++ b/src/App/templates/form.html
@@ -5,7 +5,7 @@
         <div class="form-group row">
             <label for="nimi" class="control-label col-sm-3">Nimi</label>
             <div class="col-sm-9">
-                <input class="form-control validate" id="nimi" name="nimi" type="text" />
+                <input class="form-control validate" id="nimi" name="name" type="text" />
             </div>
         </div>
         <div class="form-group row">
@@ -17,7 +17,7 @@
         <div class="form-group row">
             <label for="peruste" class="control-label col-sm-3">Maksun peruste</label>
             <div class="col-sm-9">
-                <textarea class="form-control validate" rows="3" id="peruste" name="peruste"></textarea>
+                <textarea class="form-control validate" rows="3" id="peruste" name="description"></textarea>
             </div>
         </div>
         <h5>Tositteiden erittely</h5>
