--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -1,43 +1,20 @@
 {% extends "index.html" %}
 {% block content %}
 
-{% if bills|length == 0 %}
-    <h4>Ei kulukorvauslomakkeita näytettäväksi.</h4>
-{% else %}
-<div class="table-responsive">
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Lähettäjä</th>
-                <th>Päiväys</th>
-                <th>Hyväksytty</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for bill in bills %}
-            <tr>
-                <th>{{ bill.submitter }}</th>
-                <th>{{ bill.date }}</th>
-                <th id="acc-{{ bill.id }}">
-                    {% if bill.accepted %}
-                    <span style="font-size: 0.8cm;" class="fa fa-check-square-o"></span>
-                    {% endif %}
-                </th>
-                <th>
-                    <a href="bills/{{ bill.filename }}" class="btn btn-primary" role="button">
-                        Lataa&nbsp;<span class="fa fa-file-pdf-o"></span>
-                    </a>
-                    <button id="btn-{{ bill.id }}" class="btn btn-success" role="button">
-                        <span class="fa fa-check-square-o"></span>
-                    </a>
-                </th>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+<h4 id="empty" hidden>Ei kulukorvauslomakkeita.</h4>
+
+<table id="table" class="table table-striped col-sm-12">
+    <thead>
+        <tr>
+            <th class="col-sm-4">Lähettäjä</th>
+            <th class="col-sm-4">Päiväys</th>
+            <th class="col-sm-4"></th>
+        </tr>
+    </thead>
+    <tbody id="table-body">
+
+    </tbody>
+</table>
 
 <script src="{{ url_for('static', filename='view.js') }}"></script>
-{% endif %}
 {% endblock %}
