Modified naviation buttons.

--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -5,8 +5,9 @@
 
 <div id="table">
     <div class="col-sm-4">
-        <button id="prev" class="btn btn-primary"><span class="fa fa-angle-left"></span></button>
-        <button id="next" class="btn btn-primary"><span class="fa fa-angle-right"></span></button>
+        <button class="prev btn btn-primary"><span class="fa fa-angle-left"></span></button>
+        <span class="page"></span>
+        <button class="next btn btn-primary"><span class="fa fa-angle-right"></span></button>
     </div>
 
     <table class="table table-striped col-sm-12">
@@ -23,8 +24,9 @@
     </table>
 
     <div class="col-sm-4">
-        <button id="prev" class="btn btn-primary"><span class="fa fa-angle-left"></span></button>
-        <button id="next" class="btn btn-primary"><span class="fa fa-angle-right"></span></button>
+        <button class="prev btn btn-primary"><span class="fa fa-angle-left"></span></button>
+        <span class="page"></span>
+        <button class="next btn btn-primary"><span class="fa fa-angle-right"></span></button>
     </div>
 </div>
 
