Added GUI showing whether bill is accepted.

--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -29,8 +29,9 @@
         <thead>
             <tr>
                 <th class="col-sm-4">Lähettäjä</th>
-                <th class="col-sm-4">Päiväys</th>
-                <th class="col-sm-4"></th>
+                <th class="col-sm-3">Päiväys</th>
+                <th class="col-sm-2">Hyväksytty</th>
+                <th class="col-sm-3"></th>
             </tr>
         </thead>
         <tbody id="table-body">
