--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -6,15 +6,19 @@
 <div id="table">
     <div class="row">
         <div class="col-sm-8">
-            <form id="search-form">
-                <input id="date" placeholder="Päiväys" />
-                <input id="name" placeholder="Lähettäjä" /><br />
-                <select id="accepted" type="checkbox" value="Kaikki">
-                    <option>Kaikki</option>
-                    <option>Hyväksytyt</option>
-                    <option>Hyväksymättömät</option>
-                </select>
-                <button id="search" class="btn btn-success">Hae&nbsp;<span class="fa fa-search"></span></button>
+            <form id="search-form" class="form-inline">
+                <div class="col-sm-7">
+                    <input id="name" class="form-control" placeholder="Lähettäjä" />
+                    <input id="date" class="form-control" placeholder="Päiväys" />
+                </div>
+                <div class="form-group col-sm-8">
+                    <select class="form-control" id="accepted" type="checkbox" value="Kaikki">
+                        <option>Kaikki</option>
+                        <option>Hyväksytyt</option>
+                        <option>Hyväksymättömät</option>
+                    </select>
+                    <button id="search" class="form-control btn btn-success">Hae&nbsp;<span class="fa fa-search"></span></button>
+                </div>
             </form>
         </div>
 
