--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -50,10 +50,10 @@
     <table class="table table-striped col-sm-12">
         <thead>
             <tr>
-                <th class="col-sm-4">Lähettäjä</th>
-                <th class="col-sm-3">Päiväys</th>
-                <th class="col-sm-2">Hyväksytty</th>
-                <th class="col-sm-3"></th>
+                <th class="col-sm-4" style="width: 35%;">Lähettäjä</th>
+                <th class="col-sm-3" style="width: 25%;">Päiväys</th>
+                <th class="col-sm-2" style="width: 15%;">Hyväksytty</th>
+                <th class="col-sm-3" style="width: 25%;"></th>
             </tr>
         </thead>
         <tbody id="table-body">
