Improved viewing bills.

--- a/src/App/templates/index.html
+++ b/src/App/templates/index.html
@@ -12,6 +12,19 @@
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+        <style>
+        .show {
+            display: block !important;
+        }
+        .hidden {
+            display: none !important;
+            visibility: hidden !important;
+        }
+        .invisible {
+            visibility: hidden;
+        }
+        </style>
+
         <title>FK-kulu</title>
     </head>
     <body>
