Bills can be hidden from browser.

--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -64,7 +64,7 @@
             </div>
             <div class="modal-footer">
                 <button id="submit-accept" class="btn btn-success">Hyväksy!</button>
-                <button id="submit-toggle-hide" class="btn btn-success"></button>
+                <button id="submit-toggle-hide" class="btn"></button>
                 <button id="cancel-accept" class="btn btn-danger">Sulje.</button>
             </div>
         </div>
