Changing password now works.

--- a/src/App/templates/login.html
+++ b/src/App/templates/login.html
@@ -19,6 +19,7 @@
             <button class="btn btn-primary" type="button" id="submit">Login</button>
         </div>
     </form>
+    <a href="/requestPasswordChange">Unohtuiko salasana tai käyttäjänimi?</a>
 </div>
 
 <script src="{{ url_for('static', filename='login.js') }}" ></script
