Fixed quite many frontend bugs.

--- a/src/App/templates/form.html
+++ b/src/App/templates/form.html
@@ -34,7 +34,10 @@
             </div>
         </div>
         <div class="form-group">
-            <button class="btn btn-primary" type="button" id="submit" disabled>Lähetä</button>
+            <button class="btn btn-primary" type="button" id="submit" disabled>
+                Lähetä
+                <span id="sbm-sp" class="hidden fa fa-spinner fa-spin">&nbsp;</span>
+            </button>
         </div>
     </form>
 </div>
