Added paid date description field.

--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -60,6 +60,10 @@
                     <label for="info"><strong>Hyväksytty&nbsp<strong></label>
                     <input id="info" class="form-control" type="text" placeholder="Kuvaus"/>
                 </div>
+                <div id="modal-paid-form" class="form form-inline">
+                    <label for="pvm"><strong>Maksettu&nbsp<strong></label>
+                    <input id="pvm" class="form-control" type="text" placeholder="Maksu pvm."/>
+                </div>
 
             </div>
             <div class="modal-footer">
