Better bill modal and status.

--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -121,7 +121,7 @@
             <tr>
                 <th class="col-sm-4" style="width: 35%;">Lähettäjä</th>
                 <th class="col-sm-3" style="width: 25%;">Päiväys</th>
-                <th class="col-sm-2" style="width: 15%;">Hyväksytty</th>
+                <th class="col-sm-2" style="width: 15%;">Status</th>
                 <th class="col-sm-3" style="width: 25%;"></th>
             </tr>
         </thead>
