--- a/src/App/templates/form.html
+++ b/src/App/templates/form.html
@@ -42,7 +42,7 @@
     </form>
 </div>
 
-<script src="{{ url_for('static', filename='script.js') }}"></script>
+<script src="{{ url_for('static', filename='script.js', version='2') }}"></script>
 <script src="{{ url_for('static', filename='filereader.js') }}"></script>
 <script src="{{ url_for('static', filename='iban.js/iban.js') }}"></script>
 {% endblock %}
