--- a/src/App/templates/view.html
+++ b/src/App/templates/view.html
@@ -137,5 +137,5 @@
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='view.js') }}"></script>
+<script src="{{ url_for('static', filename='view.js') }}?ver=1"></script>
 {% endblock %}
